# nltkpass

./: .gitignore  README.md  example.ipynb  pyproject.toml  rare.txt  requirements.txt  server.py
nltkpass/: nltkpass.py
public/: index.html  index.js
scripts/: get_words.py
web/front/: server.py
