[tool.poetry]
name = "phrasepass-util"
version = "0.2.0"
description = "Utilities for phrasepass"
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
nltk = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
