[tool.poetry]
name = "nltkpass"
version = "0.2.0"
description = "Phrasepass from NLTK"
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
notebook = "^6.0"
flask = "^1.1"
gunicorn = "^19.9"
requests = "^2.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
